# pycalculator-package

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  requirements-dev.in
.github/workflows/: ci.yml  deploy-testpypi.yml  setup.yml
requirements/: dev.txt  prod.txt
src/elolawyn_calculator/: __init__.py  calculator.py
tests/: calculator_test.py
